# modular-rl

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: advanced-customization.md  naming-conventions.md  new-rl-algorithm.md
examples/: train_dqn_cnn.py  train_dqn_mlp.py  train_dqn_rnn.py  train_dqn_transformer.py  train_drex_long.py  train_ppo_mlp.py  train_sac_mlp.py  train_td3_mlp.py
experiments/: __init__.py
experiments/learning/: __init__.py  run_model_learning_experiments.py
experiments/mnist/: __init__.py  data.py  models.py  run_mnist_experiments.py  train.py
lattice/: __init__.py
lattice/algorithms/: __init__.py  agent_context.py  buffers.py  builders.py  config.py  factory.py  models.py
lattice/networks/: __init__.py  sequential.py
lattice/training/: __init__.py  builders.py  env_wrapper.py  history.py  hooks.py  interaction.py  registry.py  rl_trainer.py  supervised_training.py  training_steps.py  wrappers.py
modular_rl/: __init__.py
modular_rl/algorithms/: __init__.py  buffers.py  builders.py  models.py
modular_rl/networks/: __init__.py  builders.py  heads.py  language_models.py  sequence_builders.py  simple.py
modular_rl/training/: __init__.py  builders.py  env_wrapper.py  factory.py  logger.py  optim.py  registry.py  rl_trainer.py  steps.py  (+5 more)
scripts/: run_learning_experiments.sh  run_learning_tests.sh  run_mnist_experiments.sh
tests/: test_advanced_customization.py  test_agent_builder_structure.py  test_agent_factories.py  test_config_builders.py  test_custom_algorithm_registration.py  test_simple_networks.py  test_training_history.py
(+33 files in other folders)
