[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modular-rl"
version = "0.1.0"
description = "Modular Reinforcement Learning & Deep Learning Library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "gymnasium[classic-control]>=0.28.1",
    "numpy>=1.22.0",
    "matplotlib>=3.5.0",
]

[tool.setuptools.packages.find]
include = ["modular_rl*"]
