[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice"
version = "0.1.0"
description = "PyTorch toolkit for neural networks, supervised training, and reinforcement learning"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "gymnasium[classic-control]>=0.28.1",
    "numpy>=1.22.0",
    "matplotlib>=3.5.0",
]

[tool.setuptools.packages.find]
include = ["lattice*"]
